--- a/color_scheme/applications/fzf/templates/default.mustache
+++ b/color_scheme/applications/fzf/templates/default.mustache
@@ -20,6 +20,6 @@ local colorF4='#{{baseF4_hex}}'
 local colorF5='#{{baseF5_hex}}'
 local colorF6='#{{baseF6_hex}}'
 local colorF7='#{{baseF7_hex}}'
-export FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --color=fg:$colorFG,bg:-1,hl:$colorF7,fg+:$colorFG,bg+:$colorB4,gutter:$colorBg,hl+:$colorF7,prompt:$colorF6,pointer:$colorF4,marker:$colorF2,spinner:$colorF1,info:$colorF5"
+export FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --color=fg:$colorFG,bg:-1,hl:$colorF7,fg+:$colorFG,bg+:$colorBf,gutter:-1,hl+:$colorF7,prompt:$colorF6,pointer:$colorF4,marker:$colorF2,spinner:$colorF1,info:$colorF5"
 }
 _gen_fzf_default_opts
